# dnd

./: .pre-commit-config.yaml  =1.20.0  =7.0  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART-ISSUES.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  admin-commands.md  bug_report.md  epic.md  feature_request.md  phase-a-character-system.md  phase-b-faction-location.md  phase-c-creatures-encounters.md  phase-d-dungeon-exploration.md  phase-e-content-population.md  phase-f-rules-polish.md  save-load-system.md
.github/workflows/: ci.yml  create-phase-issues.yml
Documentation/: Temple of Elemental Evil - AD&D 1E Roguelike Implementation Plan.md  Temple of Elemental Evil - Next Development Phase.md  admin-commands.md  rules-engine-modules.md  save-load-format.md  ui-architecture.md  ui-manual-tests.md  world-simulation.md
data/: character_1.json  cleric_battle.csv  items.json  monster_kind.json  monsters.json  npc.json  person.py  places.json  test_monster.json  treasure.json
data/items/: longsword.json
data/locations/: temple_entrance.json
data/locations/hommlet/: blacksmith.json  church_of_st_cuthbert.json  druid_grove.json  farmers_cottage.json  inn_of_the_welcome_wench.json  inn_upper_floor.json  leatherworker.json  main_street.json  millers_house.json  storage_room.json  tailor_shop.json  tower_ruins.json  trading_post.json  village_elder.json  village_green.json  well.json  woodcutter.json
data/monsters/: goblin.json
data/schemas/: item.schema.json  location.schema.json  monster.schema.json
prompts/: .prompt001.txt.un~  prompt001.txt
scripts/: README-create-issues.md  admin_commands_demo.py  create_phase_issues.py  list_locations.py  terminal_ui_demo.py  validate_data.py
src/: __init__.py  abilities.py  combat.py  config.py  dice.py  logging_config.py  main.py  monster.py  pioneer_test.py  player.py
src/admin/: __init__.py  commands.py
src/entities/: __init__.py  character.py  entity.py
src/game/: __init__.py  action_handler.py  game_engine.py
src/persistence/: __init__.py  save_manager.py
src/rules/: README.md  __init__.py  abilities.py  character_classes.py  combat_system.py  races.py  saving_throws.py
src/simulation/: __init__.py  npc_ai.py
src/ui/: __init__.py  display.py  input.py  input_handler.py  terminal_display.py
src/utils/: __init__.py  dice.py
src/world/: __init__.py  event_system.py  time_system.py  world_state.py
tests/: test_abilities.py  test_action_handler.py  test_admin_commands.py  test_character.py  test_character_classes.py  test_combat.py  test_combat_system.py  test_config.py  test_data_validation.py  test_dice.py  test_display.py  test_entity.py  test_event_system.py  test_game_engine.py  test_game_loop_integration.py  test_input.py  test_input_handler.py  test_logging_config.py  test_npc_ai.py  test_package.py  test_races.py  test_save_manager.py  test_saving_throws.py  test_terminal_display.py  test_time_system.py  test_ui_integration.py  test_world_state.py
